--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -42,7 +42,7 @@ taxAmountIndicatorLabel=Auto Calc. Tax
 #XFLD: Label for Tax Amount
 taxAmountLabel=Tax Amount
 
-#XFLD: Label for Description
+#XFLD:  Label for Description
 descriptionLabel=Description
 
 #XFLD: Label for Requester ID
@@ -103,28 +103,34 @@ ibanLabel=IBAN
 instructionKeyLabel=Instruction Key
 
 #XTIT: Title for Accounting Data
-accountingDataLabel=Accounting Data
+accountingDataTitle=Accounting Data
 
-#XFLD: Label for Amount
+#XTIT: Title for Line Items
+lineItemsTitle=Line Items
+
+#XFLD:  Label for Item Number
+itemNumberLabel=Item #
+
+#XFLD:  Label for Amount
 amountLabel=Amount
 
-#XFLD: Label for Credit/Debit
+#XFLD:  Label for Credit/Debit
 creditDebitLabel=Credit/Debit
 
-#XFLD: Label for Tax Code
+#XFLD:  Label for Tax Code
 taxCodeLabel=Tax Code
 
-#XFLD: Label for GL Account
+#XFLD:  Label for GL Account
 glAccountLabel=GL Account
 
-#XFLD: Label for Cost Center
+#XFLD:  Label for Cost Center
 costCenterLabel=Cost Center
 
-#XFLD: Label for Profit Center
+#XFLD:  Label for Profit Center
 profitCenterLabel=Profite Center
 
-#XFLD: Label for WBS Element
-wbsElementLabel= WBS Element
+#XFLD:  Label for WBS Element
+wbsElementLabel=WBS Element
 
 #XTIT: Label for Supporting Document
 supportingDocumentTitle= Supporting Document
@@ -165,3 +171,11 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+#~~~ Form Validator ~~~~~~~~~~~~~~~~~~~~~~~
+
+#YMSG: Mandatory input field text
+mandatoryFieldText=Please fill in this mandatory field!
+
+#YMSG: Use valid decimal value text
+useValidDecimalValueText=Please enter valid decimal value!
