--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -153,6 +153,8 @@ confirmLabel=Confirm
 #XFLD: Label for Clear
 clearLabel=Clear
 
+#YMSG: Error dialog description
+setPrimaryFileText= Please select PDF file as Primary File
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Not found view title
