--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -127,7 +127,7 @@ glAccountLabel=GL Account
 costCenterLabel=Cost Center
 
 #XFLD:  Label for Profit Center
-profitCenterLabel=Profite Center
+profitCenterLabel=Profit Center
 
 #XFLD:  Label for WBS Element
 wbsElementLabel=WBS Element
@@ -153,6 +153,8 @@ confirmLabel=Confirm
 #XFLD: Label for Clear
 clearLabel=Clear
 
+#YMSG: Error dialog description
+setPrimaryFileText= Please select PDF file as Primary File
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Not found view title
@@ -171,3 +173,193 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+#~~~ Form Validator ~~~~~~~~~~~~~~~~~~~~~~~
+
+#YMSG: Mandatory input field text
+mandatoryFieldText=Please fill in this mandatory field!
+
+#YMSG: Use valid decimal value text
+useValidDecimalValueText=Please enter valid decimal value!# This is the resource bundle for Finance
+
+#XTIT: Application name
+appTitle=Finance
+
+#YDES: Application description
+appDescription= Single Payment
+
+#XTIT: Title for Single Payment
+singlePaymentTitle= Enter Payment Request (Single)
+
+#XTIT: Title for General Information
+generalInformationTitle=General Information
+
+#XFLD:  Label for Company Code
+companyCodeLabel=Company Code
+
+#XFLD:  Label for Supplier Number
+supplierNumberLabel=Supplier Number
+
+#XFLD: Label for One Time Vendor
+oneTimeVendorLabel=One Time Vendor
+
+#XFLD: Label for Supplier Name
+supplierNameLabel=Supplier Name
+
+#XFLD: Label for ABN Number
+abnNumberLabel=ABN Number
+
+#XFLD: Label for Reference Number
+referenceNumberLabel=Reference Number
+
+#XFLD: Label for Document Date
+documentDateLabel=Document Date
+
+#XFLD: Label for Gross Amount
+grossAmountLabel=Gross Amount
+
+#XFLD: Label for Auto Calc. Tax
+taxAmountIndicatorLabel=Auto Calc. Tax
+
+#XFLD: Label for Tax Amount
+taxAmountLabel=Tax Amount
+
+#XFLD:  Label for Description
+descriptionLabel=Description
+
+#XFLD: Label for Requester ID
+requesterIDLabel=Requester ID
+
+#XFLD:  Label for Credit Memo
+creditMemoLabel=Credit Memo
+
+#XFLD: Label for Credit Memo Reference Date
+creditMemoReferenceDateLabel=Credit Memo Reference Date
+
+#XFLD: Label for Credit Memo Reference Number
+creditMemoReferenceNumberLabel=Credit Memo Reference Number
+
+#XFLD: Label for Enter Date
+enterDateLabel=Enter Date
+
+#XTIT: Title for One Time Vendor Details
+oneTimeVendorDetailsTitle=One Time Vendor Details
+
+#XFLD: Label for Title
+titleLabel=Title
+
+#XFLD: Label for Name
+nameLabel=Name
+
+#XFLD: Label for Street
+streetLabel=Street
+
+#XFLD: Label for Post Code
+postCodeLabel=Post Code
+
+#XFLD: Label for City
+cityLabel=City
+
+#XFLD: Label for Country
+countryLabel=Country
+
+#XFLD: Label for Email
+emailLabel=Email
+
+#XFLD: Label for Bank Country
+bankCountryLabel=Bank Country
+
+#XFLD: Label for Bank Name
+bankNameLabel=Bank Name
+
+#XFLD: Label for Bank Key
+bankKeyLabel= Bank Key
+
+#XFLD: Label for Bank Account
+bankAccountLabel=Bank Account
+
+#XFLD: Label for IBAN
+ibanLabel=IBAN
+
+#XFLD: Label for Instruction Key
+instructionKeyLabel=Instruction Key
+
+#XTIT: Title for Accounting Data
+accountingDataTitle=Accounting Data
+
+#XTIT: Title for Line Items
+lineItemsTitle=Line Items
+
+#XFLD:  Label for Item Number
+itemNumberLabel=Item #
+
+#XFLD:  Label for Amount
+amountLabel=Amount
+
+#XFLD:  Label for Credit/Debit
+creditDebitLabel=Credit/Debit
+
+#XFLD:  Label for Tax Code
+taxCodeLabel=Tax Code
+
+#XFLD:  Label for GL Account
+glAccountLabel=GL Account
+
+#XFLD:  Label for Cost Center
+costCenterLabel=Cost Center
+
+#XFLD:  Label for Profit Center
+profitCenterLabel=Profit Center
+
+#XFLD:  Label for WBS Element
+wbsElementLabel=WBS Element
+
+#XTIT: Label for Supporting Document
+supportingDocumentTitle= Supporting Document
+
+#XFLD: Label for Set Primary
+setPrimaryLabel= Set Primary
+
+#XFLD: Label for Delete
+deleteLabel=Delete
+
+#XFLD: Label for Submit
+submitLabel=Submit
+
+#XFLD: Label for Cancel
+cancelLabel=Cancel
+
+#XFLD: Label for Confirm
+confirmLabel=Confirm
+
+#XFLD: Label for Clear
+clearLabel=Clear
+
+#YMSG: Error dialog description
+setPrimaryFileText= Please select PDF file as Primary File
+#~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~
+
+#XTIT: Not found view title
+notFoundTitle=Not Found
+
+#YMSG: The ProductsSet not found text is displayed when there is no ProductsSet with this id
+noObjectFoundText=This <ProductsSet> is not available
+
+#YMSG: The ProductsSet not available text is displayed when there is no data when starting the app
+noObjectsAvailableText=No <ProductsSetPlural> are currently available
+
+#YMSG: The not found text is displayed when there was an error loading the resource (404 error)
+notFoundText=The requested resource was not found
+
+#~~~ Error Handling ~~~~~~~~~~~~~~~~~~~~~~~
+
+#YMSG: Error dialog description
+errorText=Sorry, a technical error occurred! Please try again later.
+
+#~~~ Form Validator ~~~~~~~~~~~~~~~~~~~~~~~
+
+#YMSG: Mandatory input field text
+mandatoryFieldText=Please fill in this mandatory field!
+
+#YMSG: Use valid decimal value text
+useValidDecimalValueText=Please enter valid decimal value!
