--- a/webapp/i18n/i18n_en_US.properties
+++ b/webapp/i18n/i18n_en_US.properties
@@ -127,7 +127,7 @@ glAccountLabel=GL Account
 costCenterLabel=Cost Center
 
 #XFLD:  Label for Profit Center
-profitCenterLabel=Profite Center
+profitCenterLabel=Profit Center
 
 #XFLD:  Label for WBS Element
 wbsElementLabel=WBS Element
@@ -153,6 +153,8 @@ confirmLabel=Confirm
 #XFLD: Label for Clear
 clearLabel=Clear
 
+#YMSG: Error dialog description
+setPrimaryFileText= Please select PDF file as Primary File
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Not found view title
@@ -171,3 +173,11 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+#~~~ Form Validator ~~~~~~~~~~~~~~~~~~~~~~~
+
+#YMSG: Mandatory input field text
+mandatoryFieldText=Please fill in this mandatory field!
+
+#YMSG: Use valid decimal value text
+useValidDecimalValueText=Please enter valid decimal value!
