--- a/webapp/i18n/i18n_en_US.properties
+++ b/webapp/i18n/i18n_en_US.properties
@@ -108,6 +108,9 @@ accountingDataTitle=Accounting Data
 #XTIT: Title for Line Items
 lineItemsTitle=Line Items
 
+#XFLD:  Label for Calculate Tax
+calculateTaxLabel=Calculate Tax
+
 #XFLD:  Label for Item Number
 itemNumberLabel=Item #
 
@@ -138,6 +141,9 @@ supportingDocumentTitle= Supporting Document
 #XFLD: Label for Set Primary
 setPrimaryLabel= Set Primary
 
+#XFLD: Label for Balance
+balanceLabel= Balance:
+
 #XFLD: Label for Delete
 deleteLabel=Delete
 
@@ -153,8 +159,30 @@ confirmLabel=Confirm
 #XFLD: Label for Clear
 clearLabel=Clear
 
-#YMSG: Error dialog description
-setPrimaryFileText= Please select PDF file as Primary File
+#YMSG: Error Balance Message
+errorBalanceMessage= Please ensure the Balance: 0.00 to proceed Step 3
+
+#XFLD: Label for Upload File
+uploadLabel= Please upload Supporting Document and set PDF file as Primary File
+
+#XFLD: Label for Set Primary Description 
+setPrimaryDescriptionLabel= Use "Add" button to upload and "Set Primary" button to set primary file
+
+#XMSG: Message alert for delete record
+deleteMessage=Are you sure you want to delete this data?
+
+#XTIT: Title for Delete
+confirmDeleteTitle=Delete
+
+#XTIT: Title for Cancel
+cancelTitle= Cancel
+
+#XMSG: Message alert for cancel
+cancelMessage=Are you sure you want to cancel? This will erase all data entered and close the app.
+
+#XTIT: Title for Error
+errorTitle=Error
+
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~
 
 #XTIT: Not found view title
