--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -160,7 +160,7 @@ confirmLabel=Confirm
 clearLabel=Clear
 
 #YMSG: Error Balance Message
-errorBalanceMessage= Please ensure the Balance: 0.00 to proceed Step 3
+errorBalanceMessage= Please ensure Balance: 0.00 to proceed step 3
 
 #XFLD: Label for Upload File
 uploadLabel= Please upload Supporting Document and set PDF file as Primary File
